@@ -7,6 +7,11 @@ GNU coreutils NEWS                                    -*- outline -*-
   ls --color once again honors the 'NORMAL' dircolors directive.
   [bug introduced in coreutils-6.11]
 
+  sort -M now handles abbreviated months that are aligned using blanks
+  in the locale database.  Also locales with 8 bit characters are
+  handled correctly, including multi byte locales with the caveat
+  that multi byte characters are matched case sensitively.
+
 ** New features
 
   join now accepts the --header option, to treat the first line of each
